<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<RelativeLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".SignUpform">

    <TextView
        android:id="@+id/registerHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:text="@string/register_form"
        android:textSize="40sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/eName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/registerHeading"
        android:layout_marginTop="20dp"
        android:hint="@string/User_name"
        android:autofillHints="username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/eEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/eName"
        android:layout_marginTop="20dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress" />

    <EditText
        android:id="@+id/ePhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/eEmail"
        android:layout_marginTop="20dp"
        android:hint="@string/phone"
        android:inputType="phone"
        android:autofillHints="phone" />

    <EditText
        android:id="@+id/ePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ePhone"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:autofillHints="password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/eConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ePassword"
        android:layout_marginTop="20dp"
        android:hint="@string/confirm_password"
        android:autofillHints="password"
        android:inputType="textPassword" />
    <EditText
        android:id="@+id/eCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/eConfirmPassword"
        android:layout_marginTop="20dp"
        android:hint="@string/country"
        android:autofillHints="Countryname"
        android:inputType="textPersonName" />


    <Button
        android:id="@+id/btnSignup"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/eCountry"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="60dp"
        android:background="#112C43"
        android:text="@string/sign_up"
        android:textColor="@color/cardview_light_background"

        />

    <Button
        android:id="@+id/btnsignin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnSignup"
        android:layout_marginVertical="50dp"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/holo_red_dark"
        android:text="@string/sign_in"
        android:textColor="@color/cardview_light_background"

        />




</RelativeLayout>
</ScrollView>