<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
    android:layout_height="wrap_content"
        android:gravity="center"

    tools:context=".MainActivity">
        <TextView
            android:id="@+id/uiheading"
            android:layout_width="270dp"
            android:layout_height="55dp"
            android:textAlignment="center"
            android:layout_marginTop="30dp"
            android:text="@string/my_profile"
            android:layout_marginLeft="40dp"
            android:gravity="center"
            android:textSize="40sp" />
        <EditText
            android:id="@+id/edittextui"
            android:layout_width="180dp"
            android:layout_height="55dp"
            android:layout_marginTop="150dp"
            android:autofillHints="Username"
            android:layout_marginRight="180dp"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:hint="@string/User_name"
            android:textStyle="bold" />
        <ImageButton
            android:id="@+id/imagebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="165dp"
            android:layout_marginLeft="150dp"
            android:background="@drawable/ic_baseline_email_24"
            android:contentDescription="@string/studentimage" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="190dp"
            android:layout_height="190dp"
            android:layout_marginTop="120dp"
            android:layout_marginLeft="190dp"
            android:contentDescription="@string/studentimage"
            android:src="@drawable/student" />
        <RadioGroup
            android:id="@+id/radiogroup"
            android:layout_width="200dp"
            android:layout_height="70dp"
           android:layout_marginTop="230dp"
            android:onClick="select"
            android:orientation="horizontal"
            >
            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:onClick="select"
                android:buttonTint="@color/Blue"
                android:text="@string/male" />
            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="select"
                android:text="@string/female"
                android:checked="false"
                android:buttonTint="@color/pink"
                android:layout_weight="1"/>
        </RadioGroup>
        <TextView
            android:id="@+id/expertiseid"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="300dp"
            android:text="@string/experties"
            android:textColor="@color/black"
            android:textSize="30sp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="340dp"
            android:backgroundTint="@color/Blue">

            <CheckBox
                android:id="@+id/checkbox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="CheckBtn"
                android:checked="false"
               android:text="@string/java"/>
            <CheckBox
                android:id="@+id/checkbox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="CheckBtn"
                android:checked="false"
                android:text="@string/python"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkbox3"
                android:checked="false"
                android:onClick="CheckBtn"
                android:text="@string/php"/>

        </LinearLayout>

        <TextView
            android:id="@+id/cstextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="480dp"
            android:text="@string/communication_skills"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/resulttv"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginLeft="290dp"
            android:layout_marginTop="540dp"
            android:text=""
            android:textColor="@color/black"
            android:textSize="30sp" />
        <SeekBar
            android:id="@+id/seekbarid"
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:layout_marginTop="540dp"/>

        <TextView
            android:id="@+id/Singletxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="600dp"
            android:text="Single"
            android:textColor="@color/black"
            android:textSize="30sp" />
      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="590dp"
          android:layout_marginLeft="150dp">
          <ToggleButton
              android:id="@+id/togglebtnid"
              android:layout_width="60dp"
              android:layout_height="60dp"
              android:textOn="Yes"
              android:textOff="No"
              android:background="@drawable/toggle_selector" />
      </LinearLayout>
        <Button
            android:id="@+id/signoutbtnid"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_marginTop="690dp"
            android:layout_marginLeft="100dp"
            android:text="@string/sign_out"
            android:onClick="Signout"/>





</RelativeLayout>
</ScrollView>